<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clytTarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TareaFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_save"
        app:backgroundTint="@color/fab_backcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/categor_a"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Categoria" />

    <Spinner
        android:id="@+id/spCategorias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCategoria"
        app:layout_constraintTop_toTopOf="@+id/tvCategoria" />

    <TextView
        android:id="@+id/tvPrioridad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prioridad"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvCategoria"
        app:layout_constraintStart_toStartOf="@+id/tvCategoria"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />

    <Spinner
        android:id="@+id/spPrioridad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrioridad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPrioridad"
        app:layout_constraintTop_toTopOf="@+id/tvPrioridad" />

    <ImageView
        android:id="@+id/ivPagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_pagado"
        app:layout_constraintStart_toStartOf="@+id/tvPrioridad"
        app:layout_constraintTop_toBottomOf="@+id/tvPrioridad" />

    <Switch
        android:id="@+id/swPagado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pagado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivPagado"
        app:layout_constraintStart_toEndOf="@+id/ivPagado"
        app:layout_constraintTop_toTopOf="@+id/ivPagado" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/estado_de_la_tarea"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivPagado"
        app:layout_constraintTop_toBottomOf="@+id/ivPagado" />

    <RadioGroup
        android:id="@+id/rgEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvEstado"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado">

        <RadioButton
            android:id="@+id/rbAbierta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abierta" />

        <RadioButton
            android:id="@+id/rbEnCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/en_curso" />

        <RadioButton
            android:id="@+id/rbCerrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrada" />
    </RadioGroup>

    <ImageView
        android:id="@+id/ivEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_abierto"
        app:layout_constraintBottom_toBottomOf="@+id/tvEstado"
        app:layout_constraintStart_toEndOf="@+id/tvEstado"
        app:layout_constraintTop_toTopOf="@+id/tvEstado" />

    <SeekBar
        android:id="@+id/sbHorasTrabajadas"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvHorasTrabajadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHorasTrabajadas" />

    <TextView
        android:id="@+id/tvHorasTrabajadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/rgEstado"
        app:layout_constraintTop_toBottomOf="@+id/rgEstado"
        tools:text="Llevo 10 horas trabajadas" />

    <RatingBar
        android:id="@+id/rbValoracion"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:progressTint="#FFC107"
        android:rating="3"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvValoracion"
        app:layout_constraintTop_toBottomOf="@+id/tvValoracion" />

    <TextView
        android:id="@+id/tvValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/valoraci_n_del_cliente"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvHorasTrabajadas"
        app:layout_constraintTop_toBottomOf="@+id/tvHorasTrabajadas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rbValoracion"
        app:layout_constraintTop_toBottomOf="@+id/rbValoracion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTecnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tecnico" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descripci_n"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>